OI-196: Fixed alignment of button and branding-block in homepage.

--- a/themes/openideal_theme/scss/components/_front-size-logo.scss
+++ b/themes/openideal_theme/scss/components/_front-size-logo.scss
@@ -2,6 +2,7 @@
   .main-content {
     .site-branding {
       margin-bottom: 10px;
+      padding: 0 10px;
       &--name {
         font-size: $h1-font-size;
         color: $btn-dark;
